Custom exceptions, exception handling, team implementation WIP
